kubernetes/apps/base/automation/home-assistant/ingress.yaml
# Home Assistant Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: automation
  labels:
    app.kubernetes.io/name: home-assistant
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - hass.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: hass.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  number: 80
